# ha-billing

./: .gitignore  README.md  START-HERE.md  vercel.json
apps-script/: BillingEmailHtml.gs  README.md  ReceiptPdfExport.gs  Sidebar.html  Triggers.gs  WebAppApi.gs  WebAppHeadless.gs
desktop/: .env.example  README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: .gitkeep
desktop/src-tauri/src/: main.rs
desktop/static/: index.html
docs/: CLEAN-SHEET-SETUP.md
office-tasks/: README.md
office-tasks/apps-script/: README.md  StaffReminders.gs  StatusMaintenancePatch.gs  WebAppApi.gs
web/: .env.example  CUSTOM_DOMAIN.md  DEPLOY.md  MAC-DOCK.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
web/docs/: DEPLOYMENT-CHECKLIST.md
web/e2e/: mobile.spec.ts  smoke.spec.ts
web/public/: manifest.json  sw.js
web/public/brand/: letterhead-preview.html
web/scripts/: create-clean-workbooks.ts  generate-letterhead-preview.ts  generate-pwa-icons.mjs  generate-sample-billing-pdfs.ts  inspect-pending-ar.ts  resolve-ar-folder.mjs  resolve-nr-folder.mjs  restart-dev-lan.sh  scrub-live-workbooks.ts  seed-firm-team.ts  send-launch-announcement.ts
web/src/: middleware.ts
web/src/app/: error.tsx  global-error.tsx  globals.css  ha-clio-shell.css  ha-theme.css  layout.tsx  letterhead-polish.css  mobile-iphone.css  office-hub.css  page.tsx  print.css  tables-mobile.css  ui-premium.css  viewport-shell.css
web/src/components/: AmountDisplay.tsx  (+112 more)
(+704 files in other folders)
