[package]
name = "ha-billing-desktop"
version = "1.0.0"
description = "HA Billing desktop wrapper"
authors = ["Hernandez & Associates"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
